--- a/manual.html
+++ b/manual.html
@@ -525,6 +525,7 @@ function togglemenu2() {
 
 	</script><!--end of script block-->
 	<script src="lz-string.js"></script>
+	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
 
